@@ -741,7 +741,7 @@ array=($added $removed $modified)
 for element in "${array[@]}"; do
     echo "$element"
 done
-``
+```
 
 #### What rate limiting policy does Harness employ for API requests?
 
@@ -816,10 +816,6 @@ The Kubernetes manifest has a component called upgrader. The upgrader is a cron 
 #### How can we disable cron job?
 
 If you need auto upgrade to be disabled they can perform operations: First run the following command to suspend auto-upgrade on the installed image: `kubectl patch cronjobs <job-name> -p '{"spec" : {"suspend" : true }}' -n <namespace>` Secondly in the delegate manifest, locate the CronJob resource. In the resource spec, set the suspend field to true: `spec: --suspend: true` .
-
-#### When do we have Services and Environments available at Org and Account Level in SMP?
-
-This `CDS_OrgAccountLevelServiceEnvEnvGroup` FF is required to have Services and Environments available at Org and Account Level.
 
 #### Why we do not see Dashboards in an SMP Installation?
 
@@ -995,7 +991,846 @@ For Hashicorp Vault there are the 5 types of Auth supported. Except AWS Auth and
 You can refer to these [documentation](https://developer.harness.io/docs/first-gen/continuous-delivery/concepts-cd/deployments-overview/export-deployment-logs/) and for audit trail API [this](https://developer.harness.io/docs/first-gen/firstgen-platform/techref-category/api/use-audit-trails-api/).
 
 
-#### Are trial accounts able to use the Github connector to attach their Github account?
+#### Are trial accounts able to use the GitHub connector to attach their GitHub account?
 
 Trial accounts should be able to use the same functionality as paid ones during the trial time period.
+
+
+#### At what port are the delegate prometheus metrics exposed?
+
+The delegate prometheus metrics are exposed on the port 3460 in the running delegate container
+
+#### How do I check for the listen ports on the delegate if netstat is not installed?
+
+You can run the command `lsof -nP -iTCP -sTCP:LISTEN` or install netstat or bake it into the delegate image
+
+#### What prometheus metrics are exposed on the delegate?
+
+The list of prometheus metrics exposed on the harness delegate are listed in the documentation at the following page https://developer.harness.io/docs/platform/delegates/manage-delegates/delegate-metrics/
+
+#### The Harness delegate went down and I did not get any notification via prometheus that it was in a disconnected state.  What gives?
+
+When the Harness delegate pod goes down so does it's exposed metrics endpoint as well.  The metrics here can help notify you if connectivity is lost between the Harness manager and the delegate pod itself (but obviously still present to your prometheus server to notify you as well)
+
+#### What API can be used to check for delegate connectivity status?
+
+The following API can be used to check for delegate connectivity status https://apidocs.harness.io/tag/Delegate-Setup-Resource#operation/listDelegates
+
+#### For legacy delegates that are not starting up and creating a .hprof file in the container what should I do?
+
+For the statefulset updating the environment variable "WATCHER_JAVA_OPTS" with "-Xmx512m" may help
+
+#### Deploy stage requires a service defined. Can I set up a pipeline without a service defined at a stage? 
+
+Yes, you can use the custom stage. This is a selection you can make initially while defining a Pipeline stage. 
+
+#### What if I just want to execute a simple shell or bash script step, how can I do this?
+
+With a custom stage, you do not need to define a service. This would be an ideal method of executing a shell or bash script step. 
+
+#### Is there a way to create delegate tokens via API calls in which we can do the API call for token creation and use in personalized way?
+
+Yes there is way to create delegate tokens via API calls, for details you can refer [here](https://apidocs.harness.io/tag/Delegate-Token-Resource#operation/createDelegateToken).
+
+#### Do harness support Worklaod identity federation for authentication?
+
+We support workload identify for Google Secret Manager.
+
+#### Can we use alphanumberic on the delegate names?
+
+Yes, you can use alphanumerics, but it should not start or end with a number.
+
+#### Can you give details about recent changes to Harness Self-Managed Enterprise Edition?
+
+Yes, you can refer to documentation [here](https://developer.harness.io/release-notes/self-managed-enterprise-edition/#self-managed-enterprise-edition).
+
+#### If we have a main pipeline linked to a chain pipeline, when main pipeline gets executed which pipeline settings has precedence? For eg. main pipeline has notifications set, pipeline timeout set and chain pipeline is a template pipeline with notifications set, pipeline timeout set.
+
+The notification/timeout settings for each entity will be honored as the pipeline progresses.
+
+#### Can we use expressions in tags in delegates in NG like they used custom selectors in delegates in CG?
+
+Yes, expression in delegate selections are supported. You can pass expression during delegate selection in pipeline. This will be resolved to the value of that variable. If that value is present as a tag in a delegate then that delegate will be selected.
+
+#### What could be possible reason of getting the error `Error: Rate limit reached for tasks with rank IMPORTANT. Current task count 5985 and max limit 5000`?
+
+This could happen when manager iterator is not running, there is a limit of 5000 delegate tasks at a time per account, but if iterator is not running, it will not get deleted automatically and this error arises.
+
+
+#### Whether we can limit our account/org access only to our users and not to Harness users (even read-only access)?
+
+This feature is currently available in CG, you can use `Restrict users to email domains` feature and only and set their email domain only. Also, there is a FF `LIMITED_ACCESS_FOR_HARNESS_USER_GROUP` which needs to be enabled.
+
+#### The user is blocked because of entry not cleared for his prod2 account from gateway, What could be possible steps to login?
+
+The user can directly login using deep link, https://app.harness.io/ng/account/AccountId/main-dashboard.
+
+#### The user is unable to log in, they're getting unable to log in with SSO when we have SSO enabled on the account.
+
+This is a very common scenario when users get this issue. The reason behind this is mostly that the User has signed up for a personal account or part of a different account that doesn't have the SSO enabled which is set as his default account. Hence User can log in using a username and password. If he has forgotten his password, he can always use the forgot password and then try to log in. 
+
+#### Not viewing the Allowlist option under the account
+
+The feature for allowlist is behind a Feature Flag PL_IP_ALLOWLIST_NG, kindly raise a ticket to get this enabled. 
+You can refer to this [documentation](https://developer.harness.io/docs/platform/security/add-manage-ip-allowlist/)
+
+#### Not able to setup/reset MFA
+
+When the 2FA is set as force enabled on the account level by an admin of the account. The users will have to setup the 2FA for their profile. 
+It can enabled by scanning the QR code sent in the email or using the secret key also sent in the same email using any authenticator app. 
+
+#### Issue decrypting secret from Harness Secret Manager
+
+When you are getting some errors for decryption of the secret in your pipeline. Always try to test the same secret using a shell script and try to print it.
+The secret will always be printed in encrypted ******* so you don't have to worry about the value been shown but it will make sure to isolate the issue further if the secret itself is having the issue or the way it is been referenced. 
+
+#### Issue while accessing other accounts when a user is part of multiple accounts.
+
+Sometimes, this might happen due to some edge case where a user is somehow unable to access his other account when he is part of multiple accounts as the login mechanism works for the default account. The user can still try to get to his account (not the default one) by using the deep link. The deep link is nothing  y the full URL of the account he wants to access : 
+https://app.harness.io/ng/account/**accountidhere**/main-dashboard
+
+#### How to disable a pipeline
+
+You can use the Deployment Freeze option :
+ 
+[documentation](https://developer.harness.io/docs/continuous-delivery/manage-deployments/deployment-freeze/)
+
+#### Slack Notifications are not working
+
+In case your Slack notifications are not working, you can start by troubleshooting and validating the webhook for Slack and then check how the notifications are configured at the pipeline level or user group level. 
+When executing the pipeline don't check the box for notifying only me. 
+
+#### Harness NG project admin permission after creating a project
+
+When you create a project using the API, by default the Project inherits the project admin permissions on creation from the Service Account where the API token was generated. 
+
+#### Harness API Token validity
+
+In Harness under Service Account when you create the token, the validity of the token depends on how the token was created. If you have specified the expiry date. In case you want the token to never expire you can set the expiration to No Expiration option. 
+
+#### Providing Access to Specific Pipelines in Harness
+
+You can make use of the RBAC [documentation](https://developer.harness.io/docs/platform/role-based-access-control/rbac-in-harness/)
+You can create a resource group and pick specific pipelines to have specific RBAC access to. 
+
+#### Not able to remove a pipeline
+
+In case of force deletion of Harness Resources : 
+Account resources --> Default Settings and then under General enable the "Enable Force Delete of Harness Resources
+and then try to delete the pipeline from Harness UI. This option is force deleted for entities. 
+
+#### VAULT operation error: Decryption failed after 3 retries for secret
+
+Someone times you see this error on the execution of the pipelines. We might have these errors due to the network the delegate is either down or has issues connecting to the Vault where the secret is created. The first thing is can do is validate the delegates are up and running go the connectors used in the pipelines and do a connectivity test. In case that fails then login to the delegate and try to reach the connector URL from the delegate.  
+
+#### Can old email be changed in user account
+
+If the Users are provisioned via SCIM then you can just update the email in the SSO provider end and they will get updated in Harness. 
+If the users were added manually you will need to remove them and add the new emails. 
+
+#### Problems enabling mTLS - Error [IOException: Unexpected response code for CONNECT: 403]
+
+When mTLS has been enabled for your delegates, you might see the 403 errors, this could be due to the proxy not resolving harness domain app.harness.io from the delegate. 
+
+#### I'm trying to confirm is that if I create a role at an account level with Administrator privileges. Then apply this to a particular resource group that only has scope for a specific Harness Organisation, won't this just provide admin access to this organization?
+
+The advised way to achieve your use case is to create user with minimal access at account level then add the same user at required organisation level with the admin access so that you can control user RBAC at org level scope.
+
+#### Changes identity provider to OKTA from some other provider
+
+This is the document which talks about OKTA SAML setup with Harness : [documentation](https://developer.harness.io/docs/platform/authentication/single-sign-on-saml/), 
+When you will be setting up a new OKTA SAML and then migrating your users to it,  You will need to setup the same with Harness as mentioned in the above document , as Harness needs the metadata XML file from OKTA with the configuration. 
+ 
+The permissions for Harness are managed by the User Groups present in Harness. In case of authorization, the user groups from SAML app are linked to Harness Local User groups. 
+
+#### Is there an easy way to see the de-factor roles/permissions assigned to a user
+
+You can view all permissions for a user by going to Access Control --> Search for the User click on it. Click on Role Bindings and you can see permissions for the user with the scope, All, Account, Organisation and Organisations with Projects in one place. 
+If you need to see the permissions inside of a role say Account Viewer or any custom-created role and same with Resource Group then you will always need to individually click on that specific role/ resource group as it's not shown on the user permission page. 
+ 
+We only show the Account/Project/Organisation level permissions with the role-resource group with where it is assigned at and assigned through in case of a User group or directly. 
+
+But you can view all of them together by selecting the scope to All instead of Individual. 
+
+#### I need to create an AWS Secrets Manager reference type secret. I am not sure how to accomplish it. Is the "secret_manager_identifier" for the AWS Secrets Manager secret name?
+
+The secret_manager_identifier will be the identifier if your AWS secret manager which you added in your Harness as a connector. 
+Also, The secrets need to be stored in the same scope of the secret manager. So for account secrets they will be stored in the account secret manager.
+
+#### RBAC for pipeline to hide few pipelines
+
+We don't have the hide pipeline functionality. 
+The way you can do this is to create a role and resource group with specific pipelines and assign it to the Users, the users can view the pipelines but will be able to execute them based on the Resource Group assignments. 
+
+#### Delegate Token behaviour
+
+Token revocation is done server side. We have a 20 minutes cache, so the delegate will be disconnected within 20 minutes of the token removal on the server side.
+The Token is used in heartbeat but is loaded at the delegate process startup. Changing the token delegate side requires a restart of the delegate process (cycle).
+
+#### How to view the secrets value stored in Harness Secrets Manager
+
+As the secrets stored in Harness are saved as encrypted hence you can't see the value for those secrets from the Harness UI. 
+There would be a tidy way to print it using a pipeline execution. 
+ 
+Create a shellscript execution , add 2 different shell script steps, do specify the same delegate selector. 
+In shell script 1 : 
+```
+echo "text secret is: " <+secrets.getValue("printsecret")> >> /tmp/abc.txt
+```
+Here printsecret is the secret name. 
+ 
+in 2nd shell script : 
+ ```
+cat /tmp/abc.txt
+ ```
+The first shell script will output like : 
+ ```
+text secret is: **************
+ ```
+but the second one will print the value for the secret : 
+``` 
+text secret is: hellohello
+ ```
+Also, if you try to do the cat in the first step it won't print the secret in plain text. 
+
+#### How can we forcibly disconnect a delegate and delete it as admin?
+
+As Harness Delegates are managed by customers in their own infrastructure, Harness doesn't have any control on it. 
+Harness can't control the delegates on your infrastructure. 
+ 
+In Harness's architecture, the delegates in your infrastructure connect to the Harness Manager :
+ 
+https://developer.harness.io/docs/getting-started/harness-platform-architecture/#harness-platform-components
+ 
+Hence you will need to stop the delegate service in your infrastructure. 
+
+There is another way to remove the delegate is, you will need to revoke the token used by the delegate and it will get disconnected and then auto-deleted in 7 days.
+
+#### Is there a limit to the number of pipelines a project can have? What is the character limit on pipeline names?
+
+We have no limit for pipeline creation. 
+But the pipeline name character limit is 128 characters. 
+
+#### Data Deletion handling for exiting customers
+
+The process is simple when a customer account expires or leaves/churns/offboards. All the data for the customer is cleaned up after the expiry or churn/offboarding.
+
+#### Delegate disconnected status in the API
+
+```
+{delegateList(filters: [{accountId: "xxxxx"}], limit: 10) {
+
+    nodes {
+      delegateName
+      ip
+      status 
+      disconnected
+      version
+      hostName
+      lastHeartBeat
+     }
+   }
+ }
+
+```
+
+#### How to deploy Delegate in Amazon ECS for Harness NG
+
+The Harness Delegate is a software that gets installed in your environment which connects to Harness Manager and performs Continuous Delivery/Continuous Integration tasks.
+In the Harness NextGen, ECS delegate can be deployed as a docker delegate both for ECS and ECS Fargate. This tutorial shows you how to install the Harness Delegate in an ECS cluster as an ECS service to enable the Delegate to connect to your AWS resources.
+
+https://discuss.harness.io/t/how-to-deploy-delegate-in-amazon-ecs-for-harness-ng/13056
+
+#### I use a Slack bot to send messages about test job results. I couldn't find a variable for job URL
+
+For the pipeline execution URL: <+pipeline.execution.url>
+ 
+https://docs.harness.io/article/lml71vhsim-harness-variables#pipeline_execution_url
+
+#### Harness Hosted Gitops IP Address
+
+Access to Kubernetes clusters that are behind strict firewalls and are not accessible from the public internet is controlled through authorized IP addresses. To allow access to these clusters, Harness provides a list of IP addresses that need to be configured on the clusters.
+
+https://developer.harness.io/docs/continuous-delivery/gitops/gitops-ref/gitops-allowlist/
+
+#### Info of connected delegate when it's started connected to Harness
+
+The delegate initiates communication on its startup to the Harness Platform. There is also a heartbeat connection every 60 seconds from the delegate to the delegate harness to notify that it is running.
+
+#### Understand the logic behind the six-letter account identifier that Harness uses while creating the delegate
+
+This identifier refers to your account, without this, we don't know how to link old pod lifecycles and new ones, hence we will treat them differently as pod names and pod IPs change. 
+
+#### How Vault agent secret manager actually works with vault
+
+The below article talks about how secret manager works with vault :
+
+https://discuss.harness.io/t/vault-how-to-use-the-new-vault-agent-integration-method-with-harness/784
+
+#### How Harness is able to prevent tampering of artifacts and instructions from the customer infrastructure. Sounds like TLS is used, but what specific integrity checking approach is used to check instructions are not changed in flight?
+
+Details below for the protection details for the below Artifact Sources :
+ 
+Related to SSH/WinRm NG
+ 
+Artifactory
+For downloading artifacts from Artifactory to delegate, we are using org.jfrog.artifactory.client:artifactory-java-client-api:jar:2.9.1
+This is the maven repo : https://mvnrepository.com/artifact/org.jfrog.artifactory.client/artifactory-java-client-services/2.9.1 and we see that there are reported vulnerabilities for this lib version. We are working on updating the above lib to the version without vulnerabilities and we will be secure. If Artifactory URL is https, the calls are secure with TLS
+ 
+AWS S3
+For downloading artifacts from AWS S3 to delegate, we are using com.amazonaws:aws-java-sdk-s3:1.12.261 
+We don't see any reported vulnerabilities : https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3/1.12.261 we are secure.
+AWS SDK makes HTTP calls in a secure way using TLS
+ 
+Azure
+For downloading artifacts from Azure to delegate, we are using okhttp-4.9.2.jar, we see there are reported vulnerabilities and we are working to update this lib : https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp/4.9.2
+One note here is that updating this lib will be a long significant process which could last more weeks.
+ 
+Jenkins
+For downloading artifacts from Jenkins to delegate, we are using com.offbytwo.jenkins:jenkins-client:0.3.9,
+Can't find any info related to vulnerabilities.
+ 
+Nexus
+For downloading artifacts from Nexus to delegate, we are using javax.net.ssl.HttpsURLConnection from Java SDK.
+When downloading artifacts we are using SSL and we are secure here.
+ 
+Artifacts will be downloaded on the delegate and it should be safe if the network where delegates are running is secure.
+ 
+One note here, the chosen cipher suits depend on the remote server. During the SSL handshake the “server hello” message contains the Cipher suite chosen by the server from the list provided by the client (our side).
+
+
+#### How do I make config changes to increase memory consumption in a delegate YAML?
+
+You will have to make config changes in your delegate YAML to increase memory consumption. This can be done by setting the value in JAVA_OPTS to increase the Xmx value
+
+#### What is the Xmx value in the JAVA_OPTS setting?
+
+The Xmx value is a parameter used to specify the maximum heap size for a Java virtual machine (JVM) when running a Java application. It determines the amount of memory the application can use for its operations.
+
+```
+name: JAVA_OPTS
+value: "-Xms64M -Xmx8192M"
+```
+
+#### What is the API used to pull a list of users and their roles from a specific project?
+
+You can refer these docs [here](https://apidocs.harness.io/tag/Project-Role-Assignments#operation/get-project-scoped-role-assignments).
+
+#### Do we have RBAC permission on Audit Trail like we have in CG?
+
+This feature is not in NG as of now, but we do have viewer permissions in place.
+
+#### What is advisable to retain your current configuration during the Harness installation process?
+
+Harness recommends that you keep your existing Java KeyStore in place during the installation process. Updating the KeyStore may cause issues with your delegate. For more on this please read the following [Documentation](https://developer.harness.io/docs/platform/delegates/secure-delegates/install-delegates-with-custom-certs/)
+
+#### What is `linkedSsId` in SSO groups ?
+
+`linkedSsoId`  is the uuid of SSO setting creating in Harness.
+
+#### What is the purpose of `linkedSsoDisplayName` ?
+
+`LinkedSsoDisplayName` is the same SSO setting name in Harness. For SAML the value provided for both ssoGroupId and ssoGroupName  should be same.
+
+#### How can we implement an approval mechanism for authorizing the deletion of marked accounts to prevent accidental deletions and ensure that the right accounts are flagged for deletion?
+
+The implementation of this feature is currently pending. Presently, the ability to mark accounts for deletion is allowed through the "update account" permission in the admin tool, which has been granted to a wide range of users.
+
+#### How are Create APIs supposed to work as if we are creating API it won't be having permission and will return false? How do we restrict creation of resources?
+
+There are two types of scope, one is complete scope(which indicates ALL) and the other is specific. 
+- To allow creation of entity in certain scope, it means allowing to creation that entity at complete Scope level(which indicates ALL). 
+- If the usecase is  to allow Create Goverance policy at scope and restrict edit to specific policies then ideally we should split it into specific Create and Edit permissions.
+- And then define 2 Role Assignments.
+One with Create and All Goverance policy.
+One with Edit and Specific selected Goverance policies.
+
+#### What is diffrence between `terminationGracePeriodSeconds` and `preStopHook` ?
+
+
+- `TerminationGracePeriodSeconds`  - This is used to allow the main process (delegate) to delay the shutdown so that this process can perform some cleanup. The key here is that container shutdown is delayed by UP TO the specified duration. This works by delegate specifically handling SIGTERM kill signal.
+
+-  `preStopHook` - This is used to allow any other kind of cleanup outside of the main process (e.g. one wants to save files, make database backup etc..). This hook runs IN PARALLEL to the terminationGracePeriodSeconds not before, but before delegate process shutdown is triggered (i.e. before delegate process receives SIGTERM). So if the grace period expires the hook will be killed as well.
+
+#### What is the impact of having one less delegate instance during a task with a long terminationGracePeriodSeconds for reasons other than upgrades?
+
+Having one less delegate instance during a task with a long `terminationGracePeriodSeconds` for reasons other than upgrades can impact the availability of delegate resources. Other tasks may fail to get scheduled because there are not enough delegates available to handle them. This can lead to inefficiencies and delays in task processing. It's crucial to consider the potential impact on the overall system and task scheduling when using extended termination grace periods.
+
+#### What environment variable or Java option should be configured to stop exposure in the Gateway container when JWT is getting exposed?
+
+- create a configmap containing the new logback.xml (everything set to level=WARN ) 
+- mount it wherever and pass:
+`-Dlogging.config=file:/path/to/mounted/logback.xml`
+to the JVM via JAVA_OPTS in config.
+
+#### We want to know the status (failed/pass) and reason for verification step using graphQL API
+You can make use of workflow/pipeline grapnel api for execution and failureDetails field will give you desired information.
+
+#### We have enabled NG but after login we are still getting redirected to CG
+Make sure you have set the Default Experience as NG under  Account overview page
+
+#### Does Harness CG/NG saml setting is shared 
+Yes if you have configured SAML on CG same will be used for login to NG
+
+#### How to migrate user from CG to NG
+Users needs to be migrated automatically once NG is enabled
+
+#### How can be add admin in newly enabled NG account
+Users from CG Administrators group should be automatically assigned as admin role in NG, they can change and create/update other role etc in NG
+
+#### what is the role of "PROXY_HOST" in proxy.config?
+This is the host address of your proxy, which you want to configure
+
+#### If we enable proxy in delegate does that mean it is including all communication of "Connectors" - Artifact Servers, Source Repo Providers, Collaboration Providers? and also Cloud Providers?
+Yes that’s correct any outbound connection made via delegate through Harness will use that proxy
+
+#### Is it possible that one can manage org level entities at account level?
+
+This is usecase of user-group inheritance,
+
+- Create User Group at account scope.
+- Inherit User Group at each Organization scope and create appropriate role binding.
+- When trying to onboard new user to all this Orgs, all you have to do is to add that user in User Group and that will provide you access to all Org.
+- This UG would still be managed to Account Scope.
+
+For more details you can refer this [doc](https://developer.harness.io/docs/platform/role-based-access-control/add-user-groups#create-groups-by-inheritance).
+
+#### Do we plan to support AsyncAPI specs (for messaging) in our Harness APIs?
+
+This has not been planned yet.
+
+####  How events are generated on Harness platform?
+
+Audit Trail displays a record for each event of the Harness account, Modules, or Harness entities. You can refer this [docs](https://developer.harness.io/docs/platform/governance/audit-trail/).
+
+#### Do we have some documnetation to know about the delegate size guidelines ?
+ 
+Youcan refer to the following, [documentation](https://developer.harness.io/docs/platform/delegates/delegate-concepts/delegate-overview/#delegate-sizes) and also [here](https://developer.harness.io/docs/platform/delegates/delegate-concepts/delegate-requirements/).
+
+#### Can a Golang service directly provide a secret reference to an internal API and receive the decrypted secret ?
+
+Yes, there is an internal API for that, with the limitation that only the secrets stored in Harness Built in Secret manager can be retrieved. You can refer [here](https://harness.atlassian.net/wiki/spaces/PLATFORM/pages/21192704698/Secrets+Decryption+API+Via+Manager). Please note that if the secret is stored in vault or customer’s secret manager then this won’t work.
+
+#### Can i have a api to perform the operation of IP allowlist ?
+
+These are APIs to create/update IP allowlist https://apidocs.harness.io/tag/IP-Allowlist#operation/create-ip-allowlist-config, Also you can refer [here](https://developer.harness.io/docs/platform/security/add-manage-ip-allowlist/).
+
+#### Can we point auto update to our helm chart. Can we point auto update to a different registry?
+
+You can set auto upgrade to true in the helm command and control the upgrade and the repository using [this](https://developer.harness.io/docs/platform/delegates/install-delegates/delegate-upgrades-and-expiration/#use-automatic-upgrade-with-custom-delegate-images).
+
+#### Can I use a "bindSecret" in Harness LDAP settings to avoid using an inline password, as suggested in the API documentation?
+
+No, you cannot use a "bindSecret" in Harness LDAP settings to avoid using an inline password in NG LDAP. Currently, NG LDAP only allows for the use of an "INLINE" password. The appearance of "bindSecret" in the API documentation is due to a shared bean between CG and NG, and in CG, support for secret references is available. However, NG LDAP still requires an inline password, and this limitation should be considered when configuring LDAP settings in your environment.
+
+#### Can we create a delegate token with the name using which it was previously created and then deleted ?
+
+No it is not possible as same name is not possible within 30 days once it is revoked. There is a ttl for 30 days for deletion after revoke of token.
+
+#### What is the expected behavior when a customer aborts a pipeline task, and what actions are taken to ensure a clean state in the system?
+
+When you initiates an abort for a pipeline task, the expected behavior is to take actions to halt the task's execution as promptly as possible. 
+we have a method, `io.harness.delegate.service.DelegateAgentServiceImpl#abortDelegateTask`, which is used to abort a task. This method typically leverages Thread.interrupt() to initiate the abort process. The key here is to interrupt or cancel the running task effectively.
+An abort could leave the system in a potentially inconsistent or 'dirty' state, it's crucial to consider rollback procedures.
+Delegate actions, such as canceling or ending running tasks, should play a central role in preventing system inconsistencies and maintaining system integrity.
+
+#### How to automatically start a delegate when running as a Docker container?
+
+Docker provides restart policies to control whether your containers start automatically when they exit, or when Docker restarts. Restart policies start linked containers in the correct order. Docker recommends that you use restart policies, and avoid using process managers to start containers.
+Including the flag `--restart` in the docker run command will configure it to always restart, unless the container is explicitly stopped, or the daemon restarts.
+If restart policies don't suit your needs, such as when processes outside Docker depend on Docker containers, you can use a process manager such as upstart, systemd, or supervisor instead.
+To use a process manager, configure it to start your container or service using the same docker start or docker service command you would normally use to start the container manually. Consult the documentation for the specific process manager for more details.
+**Warning:** Don't combine Docker restart policies with host-level process managers, as this creates conflicts.
+This information was provided by [Docker documentation](https://docs.docker.com/config/containers/start-containers-automatically/)
+
+#### Which API Method to invoke a pipeline is the best when using multiple dynamic parameters?
+
+It depends of your scenario. If you use the same set of inputs to invoke a pipeline, we recommend to use the API Method [Execute a Pipeline with Input Set References](https://apidocs.harness.io/tag/Pipeline-Execute/#operation/postPipelineExecuteWithInputSetList). You can refer to an existing input set in the InputSet API method, so you don't need to specify all the parameters each time. For example, if you have a pre-defined input set for staging deployments, you can create an input set called "staging-inputset", as well as others for different environments. Then, you can use the `environment_name` to dynamically select the appropriate input set.
+If your pipeline has a very specific context of each execution, where you need to pass different parameters on each execution, we commend to use the approach Execute a [Pipeline with Runtime Input YAML](https://apidocs.harness.io/tag/Pipeline-Execute#operation/postPipelineExecuteWithInputSetYaml).
+
+#### Perpetual Task was not assigned to my delegate, what is most probably cause?
+
+Generally, when a perpetual task wasn't assigned to any delegates, probably you have a conflicting delegate selector. When you use connectors like secret manager, git connector along with a delegate selector in the step, mind that the manager can combine selectors from those connectors and step in order to select the most appropriate delegate selector. Review your configurations in order to make sure the selectors are matching.
+
+#### Is it possible to store a Shell Script Provision in a Git provider?
+
+At the moment, you can only store Shell Script provisions in two ways: either as inline code or within the Harness file store. Regrettably, the option to store them directly in a Git provider like GitHub or Bitbucket is not available.
+
+#### Is it possible to access vault secrets across different regions?
+
+As long as your vault server in a specific region permits access from a delegate in another region, it should function properly. You can even attempt to retrieve secrets directly from this delegate host outside of Harness to resolve any access issues, and it should work with Harness as well. Additionally, you have the option to create separate connectors for each region.
+
+#### Is there a difference between the NextGen delegates and the FirstGen delegates?
+
+We have many architectural changes between our legacy delegate, which was deployed as a StatefulSet, in comparison to the new-generation delegates, also known as immutable delegates, which are deployed as Deployment-type resources.
+Legacy delegates used to have both a watcher and a delegate process; however, immutable delegates only have one delegate process. The base OS has also changed. It was Ubuntu for legacy delegate images, but now it is RHEL for immutable delegate images.
+Immutable delegates work with the first generation as well. If you have an immutable delegate installation in your first generation, you can reuse it with your next-generation instance. You will need to regenerate the token in the next generation and enable the "next gen" attribute of the delegate to true.
+However, if you have legacy delegates in your first generation, you will require new delegate installations.
+
+#### How to Deactivate Harness Secrets Manager Using API?
+
+Unfortunately, at this time, there is no API or Terraform approach to achieve this configuration.
+
+#### Is there a way to obtain data on monthly active users (MAU) on the Harness platform?
+
+You can retrieve information about user logins from the audit log. If you need to do this through an API, we have an audit log API available. However, we do not have a consolidated view or report of all the users who have accessed the Harness platform. Nevertheless, you can use the audit log information mentioned above to obtain this data.
+
+#### Can I safely utilize API Endpoints marked as beta?
+
+API Endpoints labeled as beta have been tested by our teams and are generally safe for consumption. However, we caution against using them for critical workloads, as they are not classified as stable yet.
+
+#### Can the Delegate's StatefulSet be scaled?
+
+Yes, you can scale the Delegate StatefulSet. For more details, please refer to our autoscale documentation using replicas.
+
+#### Why the delegate image is based on UBI instead of Ubuntu?
+
+1. Security: UBI is considered a more secure option compared to Ubuntu in today's landscape. It benefits from Red Hat's rigorous security practices and is designed to be more resilient against vulnerabilities.
+2. Compatibility: When you are running workloads on OpenShift, using UBI-based images is often the preferred choice. In some scenarios, Red Hat may even mandate the use of UBI-based images. This ensures compatibility and support within the OpenShift environment.
+3. Customer Demand: We have received numerous requests from our customers to provide UBI-based images due to their security and compatibility advantages. In response to these requests, we have published UBI-based legacy delegate images.
+4. Consistency: We are not only transitioning our delegate to UBI but also all of our SaaS offerings. This provides a consistent and unified environment across our services.
+While UBI is the preferred choice, we want to emphasize that we do provide a Dockerfile for building an Ubuntu-based delegate image if you have specific requirements.
+
+#### What is RBAC and how does one manage users and roles? 
+
+Harness NextGen platform utilizes RBAC or Role-Based Access Control. Additional details on RBAC can be found in this blog post:
+
+[https://www.harness.io/blog/user-role-management]
+
+
+#### What are the main components of RBAC?
+
+RBAC uses Principals, Resource Groups, and Roles to control access. 
+
+Principals are entities taking action in the system. These include users, user groups, and service accounts.
+Resource Groups define what objects can be acted on. Objects include organizations, projects, pipelines, connectors, users, and more.
+Roles define what actions can be taken on objects. Actions include view, create, edit, delete, and so on.
+
+
+#### What is Role Binding and how does it relate to Harness RBAC?
+
+Role binding refers to the process of assigning roles and resource groups to principals (users, user groups, and service accounts). Role binding can be configured at all scopes.
+
+#### Are there any built-in roles that I can utilize?
+
+Yes, for more information on built-in roles, please see our RBAC doc: [https://developer.harness.io/docs/platform/role-based-access-control/rbac-in-harness/]
+
+
+
+#### What is the best way of implementing the Harness RBAC?
+
+Following a workflow can be a useful process for implementing and understanding RBAC: 
+
+To configure RBAC in Harness, you must:
+
+1. Create roles.
+2. Create resource groups and, optionally, apply ABAC.
+3. Create user groups, create service accounts, and add users.
+4. Assign roles and resource groups to users, user groups, and service accounts.
+5. If you have not already done so, configure authentication.
+
+#### Is there additional information on build-in roles for Harness RBAC?
+
+Yes, you can follow this doc on build-in roles: [https://developer.harness.io/docs/platform/role-based-access-control/add-manage-roles#built-in-roles]
+
+
+#### What is a Resource Group?
+
+Resource groups are an RBAC component that defines the objects that a user or service account can access. Objects are any Harness resource, including projects, pipelines, connectors, secrets, delegates, environments, users, and more.
+
+More information on Harness Resource Group and managing this can be found here: [https://developer.harness.io/docs/platform/role-based-access-control/add-resource-groups]
+
+
+#### What integration does Harness offer with SCIM providers? 
+
+Harness integrates with multiple third-party SCIM providers
+
+Okta SCIM: [https://developer.harness.io/docs/platform/role-based-access-control/provision-users-with-okta-scim]
+Azure AD SCIM: [https://developer.harness.io/docs/platform/role-based-access-control/provision-users-and-groups-using-azure-ad-scim]
+OneLogin SCIM: [https://developer.harness.io/docs/platform/role-based-access-control/provision-users-and-groups-with-one-login-scim]
+
+#### What is Just-in-time user provisioning? 
+
+Automated provisioning eliminates repetitive tasks related to manual provisioning and simplifies user management.
+
+Just-in-time (JIT) provisioning in Harness lets you provision users automatically when they first sign-in to Harness through SAML SSO. Harness supports JIT provisioning only for new users logging in through an IdP, such as Okta.
+
+JIT is currently behind a feature flag '''PL_ENABLE_JIT_USER_PROVISION'''
+
+#### Is there an overview doc on Harness RBAC and permissions? 
+
+Yes, please see this doc for more details [https://developer.harness.io/docs/platform/role-based-access-control/permissions-reference]
+
+
+#### How can user install terraform on the delegate?
+1) microdnf install yum
+2) yum install unzip
+3) curl -O -L https://releases.hashicorp.com/terraform/1.6.1/terraform_1.6.1_linux_amd64.zip
+4) unzip terraform_1.6.1_linux_amd64.zip
+5) mv ./terraform /usr/bin/
+6) terraform --version
+
+#### How can user install the aws cli in delegate?
+1) curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+
+2) microdnf install yum
+
+3) yum install unzip
+ 
+4)  unzip awscliv2.zip
+ 
+5)  ./aws/install
+
+#### Can user able to configure RBAC for the environment based on the stage?
+No, As per the current design user can only configure the RBAC for environment based on environment type.
+
+
+#### How can user install without root permission?
+Our delegate will get installed without root permissions by default, you don't need to make any changes for that.
+
+#### Can user install the docker delegate with rootless docker?
+Yes, you can install the rootless docker and after install the docker delegate.
+
+#### Can we have multiple docker delegate under same delegate name?
+
+When you have same name for multiple delegates they appear under one group and treated as multiple instances of that specific delegate. Whenever that delegate names get selected any instance registered under the name can be picked for executing the task.
+
+#### Can docker delegates be auto upgraded?
+
+Delegate auto upgrade occurs through the cron job that gets created when deploying a helm or a kubernetes delegate. We do not have any such cron in case of docker delegate and hence the image for docker delegate needs to be manually changed for delegate upgardes.
+
+#### What is the base OS for immutable delegates?
+
+Immutable delegates are based on RHEL ubi8 minimal image. On the other hand our legacy delegate were based on ubuntu.
+
+#### Do we have delegate metrics in case of legacy delegates as well?
+
+Custom delegate metrics are only available for immutable delegates, there is no custom metric for legacy delegates. Also for immutable delegates the custom metrics are available from the version 23.05.79311 onwards.
+
+#### Where does delegate look for third party client utilities?
+
+The immuatble delegates look for the third party client utilities in the PATH location during startup. Hence any third party utility that is installed in delegate is expected to be either present in the default PATH location or the path to the binary added in the environment variable PATH.
+
+#### How to find out which user is running the delegate?
+
+We can exec into the pod and run the below command to find out which user is currently owning the delegate process:
+```
+ps -ef | grep delegate
+```
+
+#### How to check the custom metrics currently being published by delegate? 
+
+Delegate has a metrics api end point which we can access on the delegate host for checking the delegate metrics available. Below is the sample curl:
+```
+curl localhost:30109/api/metrics 
+```
+
+#### What is the health api end point for the immutable delegates?
+
+Immutable delegates has a health api end point on which delegate health related information is related. Below is a sample curl for the same:
+```
+curl localhost:30109/api/health
+```
+
+#### How to pass jvm arguments for watcher process?
+Watcher process for delegates uses jvm options from the environment variable WATCHER_JAVA_OPTS. Any custom jvm argument that we want to pass to watcher process can be configured in the WATCHER_JAVA_OPTS variable in the init script.
+
+
+#### How to pass jvm arguments for delegates process?
+Delegate process picks the jvm options from JVM_OPTS environment variable. If we want to pass any custom jvm arguments for the delegate process we can configure it in the JVM_OPTS environment variable. One example is below:
+
+```
+env:
+  - name: JAVA_OPTS
+    value: "-Xms2G"
+
+```
+
+#### Does delegate preocess write gc logs by default?
+
+Delegate jvm process is not configured to write the gc logs by default. If we need to configure the gc logs we need to pass the jvm arguments for the same. For instance below are sample argument , the options can be modified as per the need for gc logs:
+
+```
+JAVA_OPTS='-Xlog:gc*=debug:file=/var/jvm/gc.log'
+```
+
+#### Can a delegate be connected to first gen and next gen at the same time?
+
+A delegate at one time can be connected to only manager instance. Hence the same delegate can not be connected to both the first gen and next gen instance of the same account.
+
+#### How can we do migration of GCP / AWS KMS secrets from FG to NG ?
+
+To migrate encrypted records from an old KMS (FG) to a new one (NG), fetch the Data Encryption Key (DEK) from the old KMS, decrypt the data, re-encrypt it with the new KMS, update the records, and ensure security and compliance. Connectivity between NG and the old KMS is essential.
+
+#### Is way to find the enabled feature flag and available one in UI?
+
+This feature will be available soon.
+
+#### Do proxy settings apply to both HTTP delegate commands and raw socket connects during capability checks?
+
+Proxy settings typically work for HTTP delegate commands, enabling you to route HTTP traffic through a proxy server. However, in the case of capability checks, such as raw socket connects, proxy settings might not apply.
+`CDS_USE_HTTP_CHECK_IGNORE_RESPONSE_INSTEAD_OF_SOCKET_NG` this feature flag should be enabled to solve the issue.
+
+#### Is it a standard practice to notify you 30 days in advance whenever there are changes to our IP addresses?
+
+We don't change IPs without 30 days notice to you all. If a security emergency requires a change, you will be notified. For more info you can refer [here](https://developer.harness.io/docs/platform/references/allowlist-harness-domains-and-ips/#allowlist-harness-saas-ips).
+
+#### Is the FF `PL_ENABLE_MULTIPLE_IDP_SUPPORT` available and enabled to use?
+
+Yes it is enabled, you can refer to [this](https://developer.harness.io/docs/platform/authentication/multiple-identity-providers/#configure-multiple-saml-providers).
+
+#### Do we have an automatic upgrades for ECS delegates?
+
+No, we don't have auto upgrade for docker delegate so far.
+
+#### What needs to follow if the production delegate is down because of using legacy delegate and a old watcher version ?
+
+- Re-deploy legacy delegate by pulling the fresh "latest" image. This will make sure that you get most recent watcher.
+- We can revert the delegate version in the ring to unblock.
+- You can use immutable delegate.
+
+#### What should be possible solution of the error `not supported by windows` while working in CCM POV ?
+
+If this is a mixed node cluster then the delegate needs to run on Linux nodes. You can use selector in your delegate yaml to make sure that Linux nodes are selected. You can refer to this [docs](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/) for more information.
+
+#### Whenever I switch my Harness account, I encounter a login prompt, captcha, and the message `too many invalid login attempts, account blocked`  despite having no invalid login attempts. Why does this happen?
+
+This issue may arise due to several reasons:
+
+- Authentication Requirement: If you are not a part of the Harness Support group, you may need to re-authenticate while switching accounts. This is a standard security measure.
+- Resetting Password: It is possible that when you attempt to reset your password, it only affects the login attempt value in one cluster and not the other one. This discrepancy in the reset process can lead to login issues.
+
+Ensure you are properly authenticated when switching accounts.
+
+#### What is the default limit of QPS?
+
+Default limit of QPS is: 50 QPM per manager* Num of managers(3) =>Total 50*3 QPM = 2.5 QPS.
+
+#### Is there a way to upgrade the volumes created when installing Harness with Helm from gp2 to gp3?
+
+Volume types are controlled by storage class, its not harness controlled.
+You can modify the storage class setting by the [link](https://kubernetes.io/docs/concepts/storage/storage-classes/#aws-ebs) but you would lose the data if aws doesn't support direct upgrade from gp2 to gp3.
+
+#### Is there a plan to integrate Git into our SMP?
+
+Yes, it will be integrated soon.
+
+#### Is it possible to attach delegate to a custom IAM role during installation in the EKS cluster?
+
+Yes, you can refer to [this](https://developer.harness.io/docs/platform/connectors/cloud-providers/ref-cloud-providers/aws-connector-settings-reference/#harness-aws-connector-settings) documentation for details.
+
+#### Can I send a single invitation email to a user for both Account-level limited permissions and Organization-level admin privileges?
+
+You can efficiently manage user invitations by combining Account-level limited permissions and Organization-level admin privileges in a single email. During the invitation process, grant the necessary permissions at the Account level, ensuring they encompass all child permissions, providing access to all organizations and projects. Simultaneously, grant admin permissions to the specific Organization at the Account level without the need for a separate invitation. This allows users to receive a unified invitation email when added to the Organization as Org Admins, streamlining the acceptance process. 
+
+#### Can administrators bulk approve and activate users who are in a "Pending Invitation" status, transitioning them to "Active Users" collectively rather than individually?
+
+Certainly. If the account authentication mechanism is configured as SSO, and the FF `PL_NO_EMAIL_FOR_SAML_ACCOUNT_INVITES` is enabled, users will be automatically enabled upon invitation. However, if the account authentication mechanism is USER_PASSWORD, each individual user needs to accept the invite to set their login password, as automatic enabling is not applicable in this case. The method of account authentication determines the user activation process, with SSO streamlining the activation for users, while USER_PASSWORD requires individual acceptance for password setup.
+
+#### Can we get information about the types of tasks of delegates, what each of them is responsible for?
+
+The task types are internal tasks for various tasks a pipeline generate. We keep introducing new tasks type and remove old ones as documenting each task type is not productive.
+
+#### Do these build_source tasks use the delegate task quota?
+
+Build source tasks do use the quota. these are tasks for artifact collections. they are only present in cg and next gen these tasks are never fired.
+
+#### Can we able to see who invited a user?
+
+Yes, you can find user invite actions in the audit trail.
+
+#### Is there any other way to remove a test user group created with `externallyManaged=true` other than remove it by a mongodb query set `externallyManaged=false`?
+
+Yes, a more preferable approach is to update the user group in the database by changing the externallyManaged flag from true to false. Following this, you can delete the user group from the UI. Deleting directly from the database might not be the optimal solution, especially if the user group is part of the hierarchy, such as an account user group inside an Org/Project. Updating the flag and then deleting through the UI ensures a more controlled and comprehensive handling of the user group removal, taking into account any dependencies in the hierarchy. This is not updatable using API, but soon deletion will be allowed from UI.
+
+#### How does Harness handle sensitive information, such as secrets, to prevent exposure in logs?
+
+When using secrets for sensitive information, the platform automatically obfuscates or masks the values in logs and other outputs. This measure ensures that sensitive information remains protected and is not exposed in plaintext within logs.
+
+#### When making service-to-service calls, is it recommended to reuse the Bearer token received from the calling service's API in the Authorization Header for the destination service's platform API?
+
+In service-to-service scenarios, a best practice is to transmit only the principal information without including the Authorization Header. This allows the destination service to handle authorization based on the provided principal details. Additionally, users have the flexibility to designate whether the call is Privileged or non-Privileged. For non-Privileged access, maintaining the principal as the end user is often suitable. Users are encouraged to refer to the platform's official documentation for comprehensive guidance on token creation and authentication for platform API calls. If further assistance is needed, contacting the platform's support team is recommended.
+
+#### Do we have documentation to implement ACL checks in log-service?
+
+Yes, you can refer to these [docs](https://apidocs.harness.io/tag/Access-Control-List#operation/getAccessControlList).
+
+#### How to perform load test on k8s delegate?
+
+You can implement Autoscale using replicas with the steps in this [docs](https://developer.harness.io/docs/platform/delegates/manage-delegates/auto-scale-using-replicas/). The autoscaling will be based on load not on number of tasks Or can do any kind of deployment or simply run shell scripts which uses cpu and memory.
+
+- based on which metric you use for HPA (we recommend cpu/memory) kubernetes will scale up/down the pod.
+- when pod is scaled down, the delegate pod will stop taking new task and finish what its executing before terminating.
+
+#### Can I centrally identify and remove resources created by a user who had admin access but now has non-admin permissions?
+
+Currcetly this centralised feature is not available and will be available soon. However, you can leverage the Audit Trail feature to track all actions performed by the user over a specified time. This way, you can identify the resources they created during their admin access.
+Audit trails are available at the Account and Organization levels, allowing you to determine the resources created by the user. To restrict the user's admin access, you need to remove their admin permissions at every scope (account, org, project). Once admin permissions are revoked, the user won't have the authority to perform admin operations.
+
+#### What rate limits are enforced for NG?
+
+Rate limits for requests/day :
+
+- Any call: Harness allows 5000 requests every 10 seconds (30,000 requests per minute) per IP address.
+- API calls: Harness allows 1000 requests per API key per minute.
+- Large requests (character size > 500,000): 1 payload every 10 seconds.
+
+For more details you can refer to [documentation](https://developer.harness.io/docs/platform/rate-limits/).
+
+#### Can I set up audit log streaming without using a Delegate agent? Are there options to stream logs directly from the cloud platform using IAM roles or other methods?
+
+For the current streaming workflow, the primary option is to use the AWS connector, which requires the use of a Delegate. Unfortunately, audit log streaming is currently only supported via Delegate, and there is no direct option to stream logs from the cloud platform using IAM roles or other methods.
+You can refer to this [documentation](https://developer.harness.io/docs/platform/connectors/cloud-providers/ref-cloud-providers/aws-connector-settings-reference/) for further information.
+
+#### What is the workflow for secrets, especially concerning the potential exposure of production secrets? Do secrets pulled by a delegate ever flow back to the Harness platform?
+
+Yes, the secrets pulled by a delegate during pipeline execution do not make their way back to the Harness platform. Delegates connect to various secret managers as the pipeline progresses, but the secret information itself is not sent to Harness. This ensures that production secrets remain secure and are not exposed within the Harness platform. You can refer to these [docs](https://developer.harness.io/docs/platform/secrets/secrets-management/harness-secret-manager-overview/).
+
+#### Will we push up the Ubuntu immutable delegate to Dockerhub?
+
+No, our Dockerfiles are made public on GitHub so that you have the option to modify and build them according to your needs. We do not push the Ubuntu immutable delegate images to Dockerhub; instead, you can access and customize the Dockerfiles from our GitHub repository.
+
+#### Are we planning to add support for multiple account Id for SMP?
+
+Currently SMP is single account only, multiple account support is yet to come.
+
+#### How can we configure OIDC with GCP WIF for Harness CI Cloud builds?
+
+Using the FF `PL_GCP_OIDC_AUTHENTICATION` you can configure the same, you can refer [here](https://developer.harness.io/tutorials/platform/configure-oidc-gcp-wif-ci-hosted), later on enable this functionality for Harness Delegate and AWS STS.
+
+#### Do we have docs for permissions references?
+
+Yes, you can refer these docs: 
+- [document1](https://developer.harness.io/docs/platform/automation/api/api-permissions-reference/)
+- [document2](https://developer.harness.io/docs/platform/role-based-access-control/permissions-reference/)
+
+#### How can we disable version override from specific delegate?
+
+Version override is not controlled from UI. If we need to disable version override it will be for entire account. You can refer [here](https://developer.harness.io/docs/platform/delegates/install-delegates/delegate-upgrades-and-expiration/) to know about delegates upgrades.
+
+#### Can I access the Harness API from a React app, and how can I handle CORS issues when making API calls with the x-api-key header?
+
+Yes, the Harness API is accessible from React (or any JavaScript library) apps. However, when encountering CORS (Cross-Origin Resource Sharing) issues, it's crucial to understand that browsers make pre-flight CORS requests, especially when the host origin and the server origin are different.
+
+To resolve CORS issues:
+- Same Origin: If your UI and API share the same origin (e.g., UI and API both on app.harness.io), there won't be CORS calls.
+- Different Origin: If your app is on a different origin (e.g., example.com/harness) and makes non-GET requests to app.harness.io/api/, the browser initiates a pre-flight request.
+- Server Configuration: Ensure your API server includes the necessary CORS headers, such as access-control-allow-origin and access-control-allow-headers, to explicitly allow the requesting origin and any custom headers like x-api-key.
+
+By configuring your server to allow the necessary origins and headers, you can address CORS issues when making API calls from your React app. This ensures a smooth interaction with the Harness API while securing your application.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
